			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Properly handle errors from DdeAccessData().  Still unclear 
    why this function fails though??

  * FIXED: Bug#297: Memory leak in arithmetic overflow of <<.  Keri Harris.

  * FIXED: Bug#295: compilation issues in different modes (not really
    used anymore).  Keri Harris.

  * FIXED: Handle interrupt/abort during atom and functor creation.
    Ulrich Neumerkel.

  * ENHANCED: Clarify undefined predicate messages from toplevel.
    Ulrich Neumerkel.

  * FIXED: Possible crash in profiler wehn using with JPL.  Alexandre Vautier.

  * FIXED: statistics on atoms freed by atom-GC to use 64-bit counter on
    all platforms.  Ulrich Neumerkel.

  * MODIFIED: Allow for modern style --help, etc. commandline options.
    Ulrich Neumerkel.

  * MODIFIED: Instantiation by cleanup-handler of call_cleanup/[2,3] has
    been made visible to the outside world.   Ulrich Neumerkel.

  * DOCS: various minor updates.  Ulrich Neumerkel.

  * FIXED: error message when trying to reposition user streams and
    the type-property for user streams.  Ulrich Neumerkel.

  * ENHANCED: intended caching of character-code -> atom was actually
    not functional.

  * FIXED: Possible crash in read/1.   Ulrich Neumerkel.

  * ENHANCED: cyclic/1 and acyclic/1 now use last-argument optimization and
    are protected against interrupts.   Ulrich Neumerkel.

  * FIXED: Type errors generated by PL_get_<int-type>_ex() used by various
    built-ins.  If the argument is an integer out of range of the C-type,
    it throws a error(representation_error(CType), _) rather than
    a type_error.  Ulrich Neumerkel.


=============================
VERSION 5.6.37 (Jul 09, 2007)
=============================
