@@ -7,6 +7,8 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: concurrent/2.  After test program by Markus Triska.
+
   * FIXED: Properly handle errors from DdeAccessData().  Still unclear 
     why this function fails though??
 
